rnsc/test_data/integration/error/parser/outside_class_directive/enum_keyword.rns
; some comment
; another comment
enum
.class public HelloWorld
.super java/lang/Object
